--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
+    "env-cmd": "^10.1.0",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.10.0",
@@ -14,8 +19,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env react-scripts start",
+    "dev": "nodemon server.js",
+    "build:staging": "env-cmd -f .env react-scripts build",
+    "build:production": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,6 +47,7 @@
   "devDependencies": {
     "@iconify/react": "^4.1.0",
     "html-webpack-plugin": "^5.5.1",
+    "nodemon": "^2.0.22",
     "source-map-loader": "^4.0.1"
   }
 }
